--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,10 @@ authors = [
 version = "0.1.0"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "nicegui~=2.22",
+    "html2text~=2025.4",
+]
 
 [dependency-groups]
 # This `dev` group contains all the development requirements for our linting toolchain.
