--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ aiohttp==3.12.15
 aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.10.0
-asttokens==3.0.0
 attrs==25.3.0
 bidict==0.23.1
 blis==1.3.0
@@ -15,16 +14,12 @@ charset-normalizer==3.4.3
 click==8.2.1
 cloudpathlib==0.21.1
 colorama==0.4.6
-comm==0.2.3
 confection==0.1.5
 cymem==2.0.11
-debugpy==1.8.16
-decorator==5.2.1
 distlib==0.4.0
 docutils==0.22
 emoji==2.14.1
 en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl#sha256=5e6329fe3fecedb1d1a02c3ea2172ee0fede6cea6e4aefb6a02d832dba78a310
-executing==2.2.0
 fastapi==0.116.1
 filelock==3.18.0
 frozenlist==1.7.0
@@ -36,25 +31,22 @@ httpx==0.28.1
 identify==2.6.12
 idna==3.10
 ifaddr==0.2.0
-ipykernel==6.30.1
-ipython==9.4.0
-ipython_pygments_lexers==1.1.1
 itsdangerous==2.2.0
 jedi==0.19.2
 Jinja2==3.1.6
-jupyter_client==8.6.3
-jupyter_core==5.8.1
 langcodes==3.5.0
 language_data==1.3.0
+loro==1.5.3
+marimo==0.14.16
 marisa-trie==1.3.0
+Markdown==3.8.2
 markdown-it-py==4.0.0
 markdown2==2.5.4
 MarkupSafe==3.0.2
-matplotlib-inline==0.1.7
 mdurl==0.1.2
 multidict==6.6.3
 murmurhash==1.0.13
-nest-asyncio==1.6.0
+narwhals==2.0.1
 nicegui==2.22.1
 nodeenv==1.9.1
 numpy==2.3.2
@@ -62,24 +54,22 @@ orjson==3.11.1
 packaging==25.0
 parso==0.8.4
 platformdirs==4.3.8
+polars==1.32.2
 pre_commit==4.2.0
 preshed==3.0.10
-prompt_toolkit==3.0.51
 propcache==0.3.2
 pscript==0.7.7
 psutil==7.0.0
-pure_eval==0.2.3
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
-python-dateutil==2.9.0.post0
+PyHTML==1.3.2
+pymdown-extensions==10.16.1
 python-dotenv==1.1.1
 python-engineio==4.12.2
 python-multipart==0.0.20
 python-socketio==5.13.0
-pywin32==311
 PyYAML==6.0.2
-pyzmq==27.0.1
 requests==2.32.4
 rich==14.1.0
 ruff==0.12.8
@@ -93,12 +83,10 @@ spacy==3.8.7
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.5.1
-stack-data==0.6.3
 starlette==0.47.2
 thinc==8.3.6
-tornado==6.5.2
+tomlkit==0.13.3
 tqdm==4.67.1
-traitlets==5.14.3
 typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.14.1
@@ -108,10 +96,8 @@ vbuild==0.8.2
 virtualenv==20.33.1
 wasabi==1.1.3
 watchfiles==1.1.0
-wcwidth==0.2.13
 weasel==0.4.1
 websockets==15.0.1
-wheel==0.45.1
 wrapt==1.17.3
 wsproto==1.2.0
 yarl==1.20.1
